fixes spacing issue with buttons in Safari

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -160,6 +160,13 @@
     padding: 2.1vw 3.2vw;
     font-size: 2.3vw;
   }
+
+  // Solution to spacing issue that was only happening in Safari
+  @media not all and (min-resolution: 0.001dpcm) {
+    @supports (-webkit-appearance: none) {
+      margin-left: -2px;
+    }
+  }
 }
 
 #checked {
